--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,10 @@ html
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
+          img(
+            id="logo"
+            src="images/setup_assistant.png"
+            )
           a.brand Ssh Butler for Soixante circuits
           .nav-collapse.collapse
             ul.nav
